# taubenturret-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  license_header.txt  pyproject.toml
taubenturret_backend/: __init__.py  api.py  config.py  detector.py  routes.py
